# irqbalance

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  activate.c  bitmap.c  bitmap.h  classify.c  configure.ac  constants.h  cpumask.h  cputree.c  index.html  irqbalance-ui.1  irqbalance.1  irqbalance.8  irqbalance.c  irqbalance.h  irqlist.c  meson.build  meson_options.txt  network.c  non-atomic.h  numa.c  params.json  placement.c  powermode.c  procinterrupts.c  strace  thermal.c  thermal.h  types.h
.github/workflows/: meson.yml  test.yml
contrib/: README  meson.build  meson_options.txt
glib-local/: Makefile.am  glib.h  glist.c  glist.h
misc/: 90-irqbalance.rules  irqbalance.env  irqbalance.service  irqbalance.service.in
misc/irqbalance.policy.d/: follow-affinity-hint.example
tests/: Makefile.am  runoneshot.sh
ui/: helpers.c  helpers.h  irqbalance-ui.c  irqbalance-ui.h  ui.c  ui.h
